# ParMooN_CMG

./: .gitignore  CMakeLists.txt  README_ANN  UserConfig.cmake  ftle.h  script.sh  thivin@10.24.36.44
1DPrograms/: CD1D_ParMooN.C  CD1D_ParMooN_ANN.C  TCD1D_ParMooN.C
2DPrograms/: CD2D_ParMooN.C  Domain.ps  NSE2D_ParMooN.C  TBE2D_ParMooN.C  TCD2D_ParMooN.C  TNSE2D_ParMooN.C  tnse2d.out
3DPrograms/: .directory  CD3D_ParMooN.C  HyperElastic3D_ParMooN.C  NSE3D_ParMooN.C  TCD3D_ParMooN.C  TNSE3D_ParMooN.C  TNSE3D_ParMooN_ALE.C
ANNDatasets/MNIST/: README
ANNDatasets/SUPG/: README  training.csv  training_data.csv  training_new.csv
ANNDatasets/SensitivityAnalysis/: trainingData.csv  trainingData1.csv
ANNDatasets/Thyroid/: README  thyroid.csv
ANNExptParallel/: Run1HL.py  Run2HL.py  Run3HL.py  RunExpt.py  gatherData.py
ANNExptParallel/ANN_SUPG_SCRIPTS/: OverallErrorPLot.py  SetParameters.py  averageError.py  epsPlots.py  mainPlot.py  script.sh  tauPlots.py
ANNPrograms/: ANN_MNIST.C  ANN_Regression.C  ANN_SUPG.C  ANN_Thyroid.C
ANNSensitivityAnalysis/: README  Run1HL.py  RunExpt.py
ANNSensitivityAnalysis/DataFunctions/: dataFunctions.py  generateDataset.py
ANNSensitivityAnalysis/ForwardRuns/: Run1HL.py  Run2HL.py  Run3HL.py  RunExpt.py  RunExptAll.py  RunParallel.py  paramRange.py
EXT_LIB/GridGen/: gridgen.h  showme  (+4 more)
Scripts/: deposition_logic.py
TESTS/: sample.cpp
data/: ABL.PRM  Cuboid.PRM  Rectangle.PRM  Rectangle2.PRM
include/: .directory
src/ANN/: ANN.C  ANNDatasetHandler.C  ANNFunctions.C  ANNLayer.C  ANNParamReader.C  CMakeLists.txt
src/Solvers/: CMakeLists.txt  DirectSparseLinearSolver.C  cudaSparseLinearSolvers.cu
(+2010 files in other folders)
